--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,19 +6,15 @@
 </head>
 <body>
 <div>
-                <h1><a href="">Django Girls Blog</a></h1>
-            </div>
+          {% for post in posts %}
+              <ul>
+                    <li>작성 시간{{ post.created_date }}</li>
+                    <li>제목 : {{ post.title }}</li>
+                    <li>내용 : {{ post.text|linebreaksbr }}</li>
+              </ul>
+{#              <hr>#}
 
-            <div>
-                <p>published: 14.06.2014, 12:14</p>
-                <h2><a href="">My first post</a></h2>
-                <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            </div>
-
-            <div>
-                <p>published: 14.06.2014, 12:14</p>
-                <h2><a href="">My second post</a></h2>
-                <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-            </div>
+          {% endfor %}
+</div>
 </body>
 </html>
