--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>안녕 장고</title>
-</head>
-<body>
-<div>
-          {% for post in posts %}
-              <ul>
-                    <li>작성 시간{{ post.created_date }}</li>
-                    <li>제목 : {{ post.title }}</li>
-                    <li>내용 : {{ post.text|linebreaksbr }}</li>
-              </ul>
-{#              <hr>#}
+{% extends 'blog/base.html' %}
 
-          {% endfor %}
-</div>
-</body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
